@startuml Snake

class AssetCtrl{
    -m_textures
    -m_fonts
    +AssetCtrl()
    +~AssetCtrl()
    +AgregarTextura(int, string, bool)
    +AgregarFuente(int, string)
    +TomarTextura(int)
    +TomarFuente(int)
    
}

class GameOver {
    -m_control
    -m_gameOverTitulo
    -m_salir
    -m_fondo
    -m_salirSelected
    -m_salirPressed
    +GameOver()
    +~GameOver()
}

class GamePlay {
    -m_control
    -m_snake
    -m_manzana
    -m_score
    -m_muro
    -m_mapa
    -m_musica
    -m_scoreText
    -m_snakeDireccion
    -m_tiempoTranscurrido
    +GamePlay()
    +~GamePlay()
}

class GameSnake{
    -m_control
    -timePerFrame
    +GameSnake()
    +~GameSnake()
    +Correr()
}

class MenuPr {
    -m_control
    -m_titulo
    -m_jugar
    -m_salir
    -m_fondo
    -m_jugarSelected
    -m_jugarPressed
    -m_salirSelected
    -m_salirPressed
    +MenuPr()
    +~MenuPr()
}

class Snake{
    -m_cuerpo
    -m_cabeza
    -m_cola
    -m_pos
    +Snake()
    +~Snake()
    +Inicializar(Texture, Texture)
    +Mover(Vector2f, Texture, Texture)
    +Colisionar(Sprite)
    +Crecer(Vector2f, Texture)
    +AutoColisionar()
}

class State{
    +State()
    +~State()
    +Inicializar()
    +Actualizar()
    +Dibujar()
    +ProcesarEntrada(Time)
}

class StateCtrl{
    
    
    -m_stateStack
    -m_newState
    -m_add
    -m_replace
    -m_remove
    -m_removeAll
    +StateCtrl()
    +~StateCtrl()
    +EliminarActual()
    +Agregar(State, bool)
    +EliminarTodo()
    +ProcesarCambioEstado()
    +ActivarVacio()
}

GameOver --|> State
GamePlay --|> State
MenuPr --|> State
GameSnake "1" *-- "1" GameOver
GameSnake "1" *-- "1" GamePlay
GameSnake "1" *-- "1" MenuPr
GameSnake o-- StateCtrl
GameOver "1" o-- "*" AssetCtrl
GamePlay *-- Snake
GamePlay "1" o-- "*" AssetCtrl
MenuPr "1" o-- "*" AssetCtrl

@enduml